--- a/style.css
+++ b/style.css
@@ -226,6 +226,7 @@ html, body {
 
 #subscribe h3 {
     text-transform: uppercase;
+    text-decoration: none;
     font-size: 14px;
     margin-top: 10px;
 }
